--- a/svg.html
+++ b/svg.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Drawing with SVG!</h1>
-<svg width="500" height="500" id="svg"></svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" id="svg"></svg>
 <br><br>
 <button id="button">Clear</button>
 <script src="svg.js"></script>
